--- a/app/views/ideator_lessons/lessons/lesson_10.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_10.html.erb
@@ -85,7 +85,7 @@ end
   </p>
 
   <p>
-    You can read more about how <code>controller</code>s and <code>view</code>s interact with <a href="http://guides.rubyonrails.org/layouts_and_rendering.html" target="_blank">here</a>.
+    You can read more about how <code>controller</code>s and <code>view</code>s interact <a href="http://guides.rubyonrails.org/layouts_and_rendering.html" target="_blank">here</a>.
   </p>
 </div>
 
