--- a/app/views/ideator_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_11.html.erb
@@ -1,26 +1,54 @@
 <h1><%= title_for(IdeatorLesson, 4, 3) %></h1>
 
 <p>
-  Our index page looks pretty ugly right now. Let's make this look nicer.
+  Our <code>index</code> page looks pretty ugly right now. Let's make this look a little bit nicer.
 </p>
 
 <p>
-  We're going to be using bootstrap again. Let's go to the bootstrap website again and look for panels. <a href = "http://getbootstrap.com/components/#panels" target = "_blank">This link</a> should take you to the right place in case you couldn't find it.
+  We're going to be using bootstrap again. Let's go to the bootstrap website again and look for panels. <a href = "http://getbootstrap.com/components/#panels" target = "_blank">This link</a> should take you to the right place in case you couldn't find it. What we're going to do is use these panels to display our ideas.
 </p>
 
 <p>
-  We're going to be using the basic example for our app. What we want to do is render one panel for each idea.
+  If we look at the bootstrap website, we see that there is a <strong>Basic example</strong> for the bootstrap panels. It looks like something we could use, so let's copy and paste this code at the top of <code>index.html.erb</code>.
 </p>
+
+<pre><code class="html">
+&lt;div class="panel panel-default"&gt;
+  &lt;div class="panel-body"&gt;
+    Basic panel example
+  &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
 
 <p>
-  What we can do then put the panel inside our each loop, and inside the <code>panel-body</code> div, we cna add in the existing code.
+  Save the file and refresh the page. You'll see that one panel is now implemented, but there's no content inside of it. What we want to do is create a new panel for each of our ideas. We can do this by using an <code>each</code> loop to iterate through each idea in <code>@ideas</code>.Make your <code>index.html.erb</code> look like this:
 </p>
+
+<pre><code class="html">
+&lt;% @ideas.each do |idea| %&gt;
+  &lt;div class="panel panel-default"&gt;
+    &lt;div class="panel-body"&gt;
+      &lt;h3&gt;&lt;%= idea.description %&gt;&lt;/h3&gt;
+      &lt;h4&gt;&lt;%= idea.author %&gt;&lt;/h4&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;% end %&gt;
+</code></pre>
 
 <p>
-  In addition, let's make it so that the author is pulled to the right and says "by NameOfAuthor". We can do this by adding a <code>pull-right</code> class to the h4. Your code should look like this:
+  Save the file and refresh the page. You should now see that each of the ideas have their own panel, this is pretty cool! In addition, to make it look even nicer let's make it so that the <code>author</code> is pulled to the right and says "by NameOfAuthor" instead of just displaying their name. We can do this by adding a <code>pull-right</code> class to the <code>h4</code>. Your code should look like this:
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/0690dffc22e3f0048624.json"></div>
+<pre><code class="html">
+&lt;% @ideas.each do |idea| %&gt;
+  &lt;div class="panel panel-default"&gt;
+    &lt;div class="panel-body"&gt;
+      &lt;h3&gt;&lt;%= idea.description %&gt;&lt;/h3&gt;
+      &lt;h4 class = "pull-right"&gt;&lt;%= idea.author %&gt;&lt;/h4&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;% end %&gt;
+</code></pre>
 
 <p>
   Let's go back into the browser and refresh the page. Awesome! You should now see each idea wrapped around in a panel.
