--- a/app/views/ideator_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_11.html.erb
@@ -36,7 +36,11 @@
 </code></pre>
 
 <p>
-  Save the file and refresh the page. You should now see that each of the ideas have their own panel, this is pretty cool! In addition, to make it look even nicer let's make it so that the <code>author</code> is pulled to the right and says "by NameOfAuthor" instead of just displaying their name. We can do this by adding a <code>pull-right</code> class to the <code>h4</code>. Your code should look like this:
+  Save the file and refresh the page. You should now see that each of the ideas have their own panel, this is pretty cool! 
+</p>
+
+<p>
+  In addition, to make it look even nicer let's make it so that the <code>author</code> is pulled to the right and says "by NameOfAuthor" instead of just displaying their name. We can do this by adding a <code>pull-right</code> class to the <code>h4</code>. Your code should look like this:
 </p>
 
 <pre><code class="html">
