--- a/app/views/ideator_lessons/lessons/lesson_13.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_13.html.erb
@@ -1,15 +1,15 @@
 <h1><%= title_for(IdeatorLesson, 4, 5) %></h1>
 
 <p>
-  If we look back at our wireframes, we see that we wanted the form to be in a pop up which is triggered when a user presses a button. Implementing this manually would be a pain in the butt, but thankfully we can easily do this using bootstrap (again).
+  If we look back at our wireframes, we see that we wanted the form to be in a pop up which is triggered when a user presses a button. Implementing this manually would be a pain in the butt, but thankfully we can do this easily by using bootstrap (again).
 </p>
 
 <p>
- 	We can use bootstrap's modal.js which can be found <a href="http://getbootstrap.com/javascript/#modals" target="_blank">here</a>. Go here and and let's look at some examples.
+ 	We can use bootstrap's <code>modal.js</code> which can be found <a href="http://getbootstrap.com/javascript/#modals" target="_blank">here</a>. Go here and and let's look at some examples.
 </p>
 
 <p>
-  We see that the "Live Demo" looks like the kind of thing we want. Like always, let's rip the example code and then modify it to our liking.
+  We see that the <strong>"Live Demo"</strong> in the documentation looks like the kind of thing we want. Like always, let's rip the example code and then modify it to our liking.
 </p>
 
 <p>
@@ -77,7 +77,7 @@
 </code></pre>
 
 <p>
-  That's added the form, but now we have two buttons, a "Submit" button and a "Save changes button". We probably want to replace the "Submit" button with the "Save changes button". So let's go ahead and do that. Copy and paste <code>&lt;%= f.submit 'Submit', class: 'btn btn-primary' %&gt;</code> and replace <code>&lt;button type="button" class="btn btn-primary">Save changes&lt;/button&gt;</code>. But now the submit button is outside the form. This will probably give us an error, so we need to make sure that the button is still in the form. We cna do his by moving where the form starts and where it ends like below:
+  Save the file and refresh the page. We can see now that the form has been added, but now we have two buttons, a "Submit" button and a "Save changes" button. We probably want to replace the "Submit" button with the "Save changes button". So let's go ahead and do that. Copy and paste <code>&lt;%= f.submit 'Submit', class: 'btn btn-primary' %&gt;</code> and replace this code: <code>&lt;button type="button" class="btn btn-primary">Save changes&lt;/button&gt;</code>. But now the submit button is outside the form code (the <code>&lt;% end %&gt;</code> of the form is above the button). This will probably give us an error, so we need to make sure that the button is still inside the form code. We can do this by moving where the form starts and ends like below:
 </p>
 
 <pre><code class="html">
